<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvBase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:text="@string/base"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etBaseAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:ems="8"
        android:hint="@string/bill_amount"
        android:inputType="numberDecimal"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvBase"
        app:layout_constraintStart_toEndOf="@+id/tvBase"
        app:layout_constraintTop_toTopOf="@+id/tvBase"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tvTipPercentage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/tvBase"
        app:layout_constraintTop_toBottomOf="@+id/tvBase"
        tools:text="24%" />

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/tip"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/tvBase"
        app:layout_constraintTop_toBottomOf="@+id/tvTipPercentage" />

    <TextView
        android:id="@+id/tvTotalAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/total"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintEnd_toEndOf="@+id/tvBase"
        app:layout_constraintTop_toBottomOf="@+id/tvTipAmount" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/tvTotalAmount"
        app:layout_constraintStart_toStartOf="@+id/tvTip"
        app:layout_constraintTop_toTopOf="@+id/tvTotalAmount"
        tools:text="103.11" />

    <TextView
        android:id="@+id/tvTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipAmount"
        app:layout_constraintStart_toStartOf="@+id/sbTipPercentageBar"
        app:layout_constraintTop_toTopOf="@+id/tvTipAmount"
        tools:text="19.96" />

    <SeekBar
        android:id="@+id/sbTipPercentageBar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:max="30"
        app:layout_constraintBottom_toBottomOf="@+id/tvTipPercentage"
        app:layout_constraintStart_toStartOf="@+id/etBaseAmount"
        app:layout_constraintTop_toTopOf="@+id/tvTipPercentage" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:text="@string/made_with_by_vinx"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />




</androidx.constraintlayout.widget.ConstraintLayout>